math-core/src/snapshots/math_core__tests__long_number.snap
---
source: math-core/src/lib.rs
expression: "3{,}453{,}435.3453"
---
<math>
    <mn>3</mn>
    <mo rspace="0">,</mo>
    <mn>453</mn>
    <mo rspace="0">,</mo>
    <mn>435.3453</mn>
</math>
