math-core/src/snapshots/math_core__tests__mathbf_with_digit.snap
---
source: math-core/src/lib.rs
expression: "\\mathbf{1234}"
---
<math>
    <mi>𝟏𝟐𝟑𝟒</mi>
</math>
