math-core/src/snapshots/math_core__tests__mathbf_with_digit_decimal.snap
---
source: math-core/src/lib.rs
expression: "\\mathbf{1234.5}"
---
<math>
    <mi>𝟏𝟐𝟑𝟒.𝟓</mi>
</math>
