math-core/src/snapshots/math_core__tests__mathbf_with_digit_dot.snap
---
source: math-core/src/lib.rs
expression: "\\mathbf{1234.}"
---
<math>
    <mrow>
        <mi>𝟏𝟐𝟑𝟒</mi>
        <mi>.</mi>
    </mrow>
</math>
