math-core/src/snapshots/math_core__tests__mathcal_vs_mathscr.snap
---
source: math-core/src/lib.rs
expression: "\\mathcal{A}, \\mathscr{A}"
---
<math>
    <mi>𝒜︀</mi>
    <mo>,</mo>
    <mi>𝒜︁</mi>
</math>
