math-core/src/snapshots/math_core__tests__mathit_of_max.snap
---
source: math-core/src/lib.rs
expression: "\\mathit{ab \\max \\alpha\\beta}"
---
<math>
    <mrow>
        <mi>𝑎𝑏</mi>
        <mi>max</mi>
        <mi>𝛼𝛽</mi>
    </mrow>
</math>
