math-core/src/snapshots/math_core__tests__mathit_of_operatorname.snap
---
source: math-core/src/lib.rs
expression: "\\mathit{a\\operatorname{bc}d}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mi>bc</mi>
        <mi>𝑑</mi>
    </mrow>
</math>
