math-core/src/snapshots/math_core__tests__mathrm_nested.snap
---
source: math-core/src/lib.rs
expression: "\\mathit{\\mathrm{a}b}"
---
<math>
    <mrow>
        <mi mathvariant="normal">a</mi>
        <mi>𝑏</mi>
    </mrow>
</math>
