math-core/src/snapshots/math_core__tests__mathrm_nested2.snap
---
source: math-core/src/lib.rs
expression: "\\mathrm{\\mathit{a}b}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mi mathvariant="normal">b</mi>
    </mrow>
</math>
