math-core/src/snapshots/math_core__tests__mathrm_nested3.snap
---
source: math-core/src/lib.rs
expression: "\\mathrm{ab\\mathit{cd}ef}"
---
<math>
    <mrow>
        <mi>ab</mi>
        <mi>𝑐𝑑</mi>
        <mi>ef</mi>
    </mrow>
</math>
